Basic layout completed

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
+    <script src="https://360player.io/static/dist/scripts/embed.js" async></script>
+
     <!--Personal CSS file-->
     <link rel="stylesheet" type="text/css" href="style.css">
 
 	<title>RunIO</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-inner">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -53,8 +55,136 @@
   </div>
 </nav>
 
-<div class="container">
-	
+<div class="container-fluid header-class">
+	<div class="text-center" style="padding-top: 250px; color: black; opacity: 1;">
+		<div style="color: white;">
+			<h2 class="text-holder">Kerala Floods</h2>
+			<h5 class="text-holder">The flood which affected just a part of our country but shook the entire nation</h5>
+		</div>
+	</div>
 </div>
+
+<div class="container">
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+  
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="header.jpg" alt="Los Angeles" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="header.jpg" alt="Chicago" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="header.jpg" alt="New York" width="1100" height="500">
+    </div>
+  </div>
+  
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+  </div>
+
+  <div class="container">
+<div id="demo1" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo1" data-slide-to="0" class="active"></li>
+    <li data-target="#demo1" data-slide-to="1"></li>
+    <li data-target="#demo1" data-slide-to="2"></li>
+  </ul>
+  
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+    	<iframe width="1100" height="345" src="https://www.youtube.com/embed/94-37xBtDcM">
+</iframe>
+    </div>
+    <div class="carousel-item">
+      <iframe width="1100" height="345" src="https://www.youtube.com/embed/cmIy_a7iiMs">
+</iframe>
+    </div>
+    <div class="carousel-item">
+      <iframe width="1100" height="345" src="https://www.youtube.com/embed/-kHEI_76Bnc">
+</iframe>
+    </div>
+  </div>
+  
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo1" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo1" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+  </div>
+
+  <div class="container">
+  	<iframe src="https://360player.io/p/k6f7rb/" frameborder="0" width=1100 height=400 allowfullscreen data-token="k6f7rb"></iframe>
+  </div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="card">
+  				<div class="card-body">
+    				<h5 class="card-title text-center">Top Tweets</h5>
+    				<h6 class="card-subtitle mb-2 text-muted text-center">View what twitter users have to say about it</h6>
+    				<div class="card-text">
+    				<div class="row">
+    					<div class="col-md-4"></div>
+    					<div class="col-md-4">
+    						<p>It's really tragic</p>
+    						<p>It's really tragic</p>
+    						<p>It's really tragic</p>
+    						<p>It's really tragic</p>
+    						<p>It's really tragic</p>
+    					</div>
+    				<div class="col-md-4"></div>
+    				</div>
+    				</div>
+  				</div>
+</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+		<div class="card">
+  				<div class="card-body">
+    				<h5 class="card-title text-center">Top Articles</h5>
+    				<h6 class="card-subtitle mb-2 text-muted text-center">View the highlights from some of the best articles on the internet</h6>
+    				<div class="card-text">
+    				<div class="row">
+    					<div class="col-md-4"></div>
+    					<div class="col-md-4">
+    						<p>It's really tragic</p>
+    						<p>It's really tragic</p>
+    						<p>It's really tragic</p>
+    						<p>It's really tragic</p>
+    						<p>It's really tragic</p>
+    					</div>
+    				<div class="col-md-4"></div>
+    				</div>
+    				</div>
+  				</div>
+		</div>
+	</div>
+	</div>
+</div>
+
+
 </body>
 </html>
