--- a/index.html
+++ b/index.html
@@ -1,190 +1,209 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta content="749113595662-95968ckdj5lsipn3ui5gjhvfhfrm4gre.apps.googleusercontent.com">
+    <meta content="749113595662-95968ckdj5lsipn3ui5gjhvfhfrm4gre.apps.googleusercontent.com">
     <!-- Bootstrap 4 ka code-->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://storage.googleapis.com/code-snippets/rapidapi.min.js"></script>
 
     <script src="https://360player.io/static/dist/scripts/embed.js" async></script>
 
     <!--Personal CSS file-->
     <link rel="stylesheet" type="text/css" href="style.css">
 
-	<title>RunIO</title>
+    <title>RunIO</title>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-inner">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-inner">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+    </nav>
 
-<div class="container-fluid header-class">
-	<div class="text-center" style="padding-top: 250px; color: black; opacity: 1;">
-		<div style="color: white;">
-			<h2 class="text-holder">Kerala Floods</h2>
-			<h5 class="text-holder">The flood which affected just a part of our country but shook the entire nation</h5>
-		</div>
-	</div>
-</div>
-
-<div class="container">
-<div id="demo" class="carousel slide" data-ride="carousel">
-
-  <!-- Indicators -->
-  <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-  </ul>
-  
-  <!-- The slideshow -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="header.jpg" alt="Los Angeles" width="1100" height="500">
+    <div class="container-fluid header-class">
+        <div class="text-center" style="padding-top: 250px; color: black; opacity: 1;">
+            <div style="color: white;">
+                <h2 class="text-holder">Kerala Floods</h2>
+                <h5 class="text-holder">The flood which affected just a part of our country but shook the entire nation</h5>
+            </div>
+        </div>
     </div>
-    <div class="carousel-item">
-      <img src="header.jpg" alt="Chicago" width="1100" height="500">
-    </div>
-    <div class="carousel-item">
-      <img src="header.jpg" alt="New York" width="1100" height="500">
-    </div>
-  </div>
-  
-  <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-</div>
-  </div>
 
-  <div class="container">
-<div id="demo1" class="carousel slide" data-ride="carousel">
+    <div class="container">
+        <div id="demo" class="carousel slide" data-ride="carousel">
 
-  <!-- Indicators -->
-  <ul class="carousel-indicators">
-    <li data-target="#demo1" data-slide-to="0" class="active"></li>
-    <li data-target="#demo1" data-slide-to="1"></li>
-    <li data-target="#demo1" data-slide-to="2"></li>
-  </ul>
-  
-  <!-- The slideshow -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-    	<iframe width="1100" height="345" src="https://www.youtube.com/embed/94-37xBtDcM">
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
+
+            <!-- The slideshow -->
+            <div class="carousel-inner" id="image_container">
+                <!--
+                <div class="carousel-item active">
+                    <img src="header.jpg" alt="Los Angeles" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                    <img src="header.jpg" alt="Chicago" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                    <img src="header.jpg" alt="New York" width="1100" height="500">
+                </div>
+                -->
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </div>
+
+    <div class="container">
+        <div id="demo1" class="carousel slide" data-ride="carousel">
+
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo1" data-slide-to="0" class="active"></li>
+                <li data-target="#demo1" data-slide-to="1"></li>
+                <li data-target="#demo1" data-slide-to="2"></li>
+            </ul>
+
+            <!-- The slideshow -->
+            <div class="carousel-inner" id="video_container">
+                <!--
+                <div class="carousel-item active">
+                    <iframe width="1100" height="345" src="https://www.youtube.com/embed/94-37xBtDcM">
 </iframe>
-    </div>
-    <div class="carousel-item">
-      <iframe width="1100" height="345" src="https://www.youtube.com/embed/cmIy_a7iiMs">
+                </div>
+                <div class="carousel-item">
+                    <iframe width="1100" height="345" src="https://www.youtube.com/embed/cmIy_a7iiMs">
 </iframe>
-    </div>
-    <div class="carousel-item">
-      <iframe width="1100" height="345" src="https://www.youtube.com/embed/-kHEI_76Bnc">
+                </div>
+                <div class="carousel-item">
+                    <iframe width="1100" height="345" src="https://www.youtube.com/embed/-kHEI_76Bnc">
 </iframe>
-    </div>
-  </div>
-  
-  <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo1" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo1" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-</div>
-  </div>
+                </div>
+            -->
+            </div>
 
-  <div class="container">
-  	<iframe src="https://360player.io/p/k6f7rb/" frameborder="0" width=1100 height=400 allowfullscreen data-token="k6f7rb"></iframe>
-  </div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="card">
-  				<div class="card-body">
-    				<h5 class="card-title text-center">Top Tweets</h5>
-    				<h6 class="card-subtitle mb-2 text-muted text-center">View what twitter users have to say about it</h6>
-    				<div class="card-text">
-    				<div class="row">
-    					<div class="col-md-4"></div>
-    					<div class="col-md-4">
-    						<p>It's really tragic</p>
-    						<p>It's really tragic</p>
-    						<p>It's really tragic</p>
-    						<p>It's really tragic</p>
-    						<p>It's really tragic</p>
-    					</div>
-    				<div class="col-md-4"></div>
-    				</div>
-    				</div>
-  				</div>
-</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-		<div class="card">
-  				<div class="card-body">
-    				<h5 class="card-title text-center">Top Articles</h5>
-    				<h6 class="card-subtitle mb-2 text-muted text-center">View the highlights from some of the best articles on the internet</h6>
-    				<div class="card-text">
-    				<div class="row">
-    					<div class="col-md-4"></div>
-    					<div class="col-md-4">
-    						<p>It's really tragic</p>
-    						<p>It's really tragic</p>
-    						<p>It's really tragic</p>
-    						<p>It's really tragic</p>
-    						<p>It's really tragic</p>
-    					</div>
-    				<div class="col-md-4"></div>
-    				</div>
-    				</div>
-  				</div>
-		</div>
-	</div>
-	</div>
-</div>
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo1" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo1" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </div>
+
+    <div class="container">
+        <iframe src="https://360player.io/p/3EknEs/" frameborder="0" width=1100 height=400 allowfullscreen data-token="k6f7rb"></iframe>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Top Tweets</h5>
+                        <h6 class="card-subtitle mb-2 text-muted text-center">View what twitter users have to say about it</h6>
+                        <div class="card-text">
+                            <div class="row">
+                                <div class="col-md-4"></div>
+                                <div class="col-md-4" id="twitter_container">
+                                    <!--
+                                    <p>It's really tragic</p>
+                                    <p>It's really tragic</p>
+                                    <p>It's really tragic</p>
+                                    <p>It's really tragic</p>
+                                    <p>It's really tragic</p>
+                                    -->
+                                </div>
+                                <div class="col-md-4"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Top Articles</h5>
+                        <h6 class="card-subtitle mb-2 text-muted text-center">View the highlights from some of the best articles on the internet</h6>
+                        <div class="card-text">
+                            <div class="row">
+                                <div class="col-md-4"></div>
+                                <div class="col-md-4">
+                                    <p>It's really tragic</p>
+                                    <p>It's really tragic</p>
+                                    <p>It's really tragic</p>
+                                    <p>It's really tragic</p>
+                                    <p>It's really tragic</p>
+                                </div>
+                                <div class="col-md-4"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--   cdns   -->
+
+    <script type="text/javascript" src="script.js"></script>
+
+    <script src="https://apis.google.com/js/client.js?onload=init"></script>
+
 
 
 </body>
+
 </html>
