--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,28 @@
     <meta content="749113595662-95968ckdj5lsipn3ui5gjhvfhfrm4gre.apps.googleusercontent.com">
     <!-- Bootstrap 4 ka code-->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.4.2/css/all.css' integrity='sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns' crossorigin='anonymous'>
-
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poiret+One" rel="stylesheet"> 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.4.2/css/all.css' integrity='sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns' crossorigin='anonymous'>
+
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poiret+One" rel="stylesheet">
+
+
 
     <!--Personal CSS file-->
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Home</title>
 </head>
+
 <body>
-	<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-        <a class="navbar-brand" href="#"style="color: black;"><strong>Project</strong></a>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+        <a class="navbar-brand" href="#" style="color: black;"><strong>Project</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,7 +39,7 @@
                     <a class="nav-link" href="home.html" style="color: black;">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="submit.html"style="color: black;">Contribute</a>
+                    <a class="nav-link" href="submit.html" style="color: black;">Contribute</a>
                 </li>
             </ul>
         </div>
@@ -43,78 +47,79 @@
     <div class="container-fluid header-class-home">
         <div class="text-center" style="padding-top: 250px;">
             <div style="color: white;">
-            	
+
                 <h1 class="text-holder" style="font-family: 'Poiret One', cursive; color:black; padding-top: 60px"><b>A new way of knowing <br> what's going on around you</b></h1>
-                <button class="btn btn-primary" style="margin-top: 100px;font-family: 'Poiret One', cursive;"onclick="window.location.href='#articles'"><b>Explore   <a class="fas fa-chevron-right" style="color: white;"></a></b></button>
-            
+                <button class="btn btn-primary" style="margin-top: 100px;font-family: 'Poiret One', cursive;" onclick="window.location.href='#articles'"><b>Explore   <a class="fas fa-chevron-right" style="color: white;"></a></b></button>
+
             </div>
         </div>
     </div>
     <div class="container" id="articles">
-    	<div class="row" style="margin-bottom: 50px;margin-top: 50px;">
-    		<div class="col-md-4 col-4">
-    			<div class="card" style="width: 18rem;">
-  					<img class="card-img-top" src="img.jpeg" alt="Card image cap" style="width: 100%; height: 150px;">
-  					<div class="card-body">
-    					<h5 class="card-title">Kerala Floods</h5>
-    					<p class="card-text">Know about one of the worst floods in the history of India which struck Kerala this year</p>
-    					<a href="index.html" class="btn btn-primary">Know more</a>
-  					</div>
-				</div>
-    		</div>
-    		<div class="col-md-4 col-4">
-    			<div class="card" style="width: 18rem;">
-  					<img class="card-img-top" src="amritsar.jpg" alt="Card image cap" style="width: 100%; height: 150px;">
-  					<div class="card-body">
-    					<h5 class="card-title">Amritsar Train Accident</h5>
-    					<p class="card-text">What exactly happened in Amritsar on that fateful night which was meant to be a day of victory of good over evil</p>
-    					<a href="#" class="btn btn-primary">Know more</a>
-  					</div>
-				</div>
-    		</div>
-    		<div class="col-md-4 col-4">
-    			<div class="card" style="width: 18rem;">
-  					<img class="card-img-top" src="bridge.jpg" alt="Card image cap" style="width: 100%; height: 150px;">
-  					<div class="card-body">
-    					<h5 class="card-title">Kolkata Bridge Collapse</h5>
-    					<p class="card-text">Someone's fault led to the loss of so many innocent lives. </p>
-    					<a href="#" class="btn btn-primary">Know more</a>
-  					</div>
-				</div>
-    		</div>
-    	</div>
-    	<div class="row" style="margin-bottom: 50px;">
-    		<div class="col-md-4 col-4">
-    			<div class="card" style="width: 18rem;">
-  					<img class="card-img-top" src="isis.jpg" alt="Card image cap" style="width: 100%; height: 150px;">
-  					<div class="card-body">
-    					<h5 class="card-title">The terror of ISIS</h5>
-    					<p class="card-text">ISIS has been a continuous source of growing terrorism and other heinous crimes, while the world eagerly waits for it's end</p>
-    					<a href="#" class="btn btn-primary">Know more</a>
-  					</div>
-				</div>
-    		</div>
-    		<div class="col-md-4 col-4">
-    			<div class="card" style="width: 18rem;">
-  					<img class="card-img-top" src="lion-air.jpeg" alt="Card image cap" style="width: 100%; height: 150px;">
-  					<div class="card-body">
-    					<h5 class="card-title">Plane crash of Lion Air</h5>
-    					<p class="card-text">The Plane crash which took away the lives of all 189 people onboard is still a mystery to be solved by aviation experts</p>
-    					<a href="#" class="btn btn-primary">Know more</a>
-  					</div>
-				</div>
-    		</div>
-    		<div class="col-md-4 col-4">
-    			<div class="card" style="width: 18rem;">
-  					<img class="card-img-top" src="glacier.jpeg" alt="Card image cap" style="width: 100%; height: 150px;">
-  					<div class="card-body">
-    					<h5 class="card-title">Melting Glacier</h5>
-    					<p class="card-text">With Global Warming on the rise every year, Glaciers are melting proportionately. Human greed seems to have no end, so does nature's wrath</p>
-    					<a href="#" class="btn btn-primary">Know more</a>
-  					</div>
-				</div>
-    		</div>
-    	</div>
+        <div class="row" style="margin-bottom: 50px;margin-top: 50px;">
+            <div class="col-md-4 col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img2.jpg" alt="Card image cap" style="width: 100%; height: 150px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Kerala Floods</h5>
+                        <p class="card-text">Know about one of the worst floods in the history of India which struck Kerala this year</p>
+                        <a href="index.html?data=kerela flood&image=img2.jpg&title=Kerala Floods&text=Know about one of the worst floods in the history of India which struck Kerala this year" class="btn btn-primary">Know more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="amritsar.jpg" alt="Card image cap" style="width: 100%; height: 150px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Amritsar Train Accident</h5>
+                        <p class="card-text">What exactly happened in Amritsar on that fateful night which was meant to be a day of victory of good over evil</p>
+                        <a href="index.html?data=amritsar train accident&image=amritsar.jpg&title=Amritsar Train Accident&text=What exactly happened in Amritsar on that fateful night which was meant to be a day of victory of good over evil" class="btn btn-primary">Know more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="bridge.jpg" alt="Card image cap" style="width: 100%; height: 150px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Kolkata Bridge Collapse</h5>
+                        <p class="card-text">Someone's fault led to the loss of so many innocent lives. </p>
+                        <a href="index.html?data=kolkata bridge collapse&image=bridge.jpg&title=Kolkata Bridge Collapse&text=Someone's fault led to the loss of so many innocent lives." class="btn btn-primary">Know more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="margin-bottom: 50px;">
+            <div class="col-md-4 col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="isis.jpg" alt="Card image cap" style="width: 100%; height: 150px;">
+                    <div class="card-body">
+                        <h5 class="card-title">The terror of ISIS</h5>
+                        <p class="card-text">ISIS has been a continuous source of growing terrorism and other heinous crimes, while the world eagerly waits for it's end</p>
+                        <a href="index.html?data=terror of isis&image=isis.jpg&title=The terror of ISIS&text=ISIS has been a continuous source of growing terrorism and other heinous crimes, while the world eagerly waits for it's end" class="btn btn-primary">Know more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="lion-air.jpeg" alt="Card image cap" style="width: 100%; height: 150px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Plane crash of Lion Air</h5>
+                        <p class="card-text">The Plane crash which took away the lives of all 189 people onboard is still a mystery to be solved by aviation experts</p>
+                        <a href="index.html?data=plane crash of lion air&image=lion-air.jpeg&title=Plane crash of Lion Air&text=The Plane crash which took away the lives of all 189 people onboard is still a mystery to be solved by aviation experts" class="btn btn-primary">Know more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="glacier.jpeg" alt="Card image cap" style="width: 100%; height: 150px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Melting Glacier</h5>
+                        <p class="card-text">With Global Warming on the rise every year, Glaciers are melting proportionately. Human greed seems to have no end, so does nature's wrath</p>
+                        <a href="index.html?data=melting glacier with global warming&image=glacier.jpeg&title=Melting Glacier&text=With Global Warming on the rise every year, Glaciers are melting proportionately. Human greed seems to have no end, so does nature's wrath" class="btn btn-primary">Know more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
